--- a/client/src/views/FieldView/styles.module.css
+++ b/client/src/views/FieldView/styles.module.css
@@ -1,5 +1,6 @@
 .FieldView {
-
+    border-spacing: 10px;
+    border-collapse: separate;
 }
 
 .row {
@@ -7,8 +8,10 @@
 }
 
 .cell {
+    width: 60px;
+    height: 60px;
     text-align: center;
-    width: 32px;
-    height: 32px;
-    border: 1px solid gray;
+    vertical-align: bottom;
+    background-color: white;
+    border: 1px solid black;
 }
