--- a/client/src/pages/GamePage/styles.module.css
+++ b/client/src/pages/GamePage/styles.module.css
@@ -3,3 +3,34 @@
     background-color: #FFE6E6;
     cursor: pointer;
 }
+
+.winnerPlayer {
+    margin-top: 24px;
+}
+
+.winnerToken {
+    margin-top: 8px;
+}
+
+.gameName {
+    width: 175px;
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #DDE3F6;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+
+.lastPlayer {
+    width: 175px;
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #F3E4D7;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+}
