--- a/client/src/views/LayoutView/styles.module.css
+++ b/client/src/views/LayoutView/styles.module.css
@@ -36,7 +36,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     padding: 20px;
     background-color: #F2F2F2;
 }
@@ -46,7 +46,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     padding: 20px;
     background-color: #F2F2F2;
 }
@@ -56,7 +56,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     padding: 20px;
     background-color: #F2F2F2;
 }
