--- a/client/src/pages/GamePage/styles.module.css
+++ b/client/src/pages/GamePage/styles.module.css
@@ -4,8 +4,11 @@
     cursor: pointer;
 }
 
-.winnerPlayer {
+.finishedInfo {
     margin-top: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .winnerToken {
